fix social icon flicker and add to docs

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -36,6 +36,10 @@ body {
 .italic {
   font-style: italic;
 }
+  
+span.light {
+  color: #879DA0;
+}
 
 /* ===============================splash page================================= */
 .wrapper-splash {
@@ -832,49 +836,37 @@ input[type=checkbox], input[type=radio] {
 }
   
 .social-buttons .social-facebook {
-  background: url('/img/social-facebook.png');
+  background: url('/img/social-facebook-2x.png');
   width: 40px;
   height: 40px;
-  background-size: 40px;
+  background-size: 80px;
   margin-right: 10px;
 }
 
 .social-buttons .social-facebook:hover {
-  background: url('/img/social-facebook-hover.png');
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
-  margin-right: 10px;
+  background-position: 40px;
 }
 
 .social-buttons .social-twitter {
-  background: url('/img/social-twitter.png');
+  background: url('/img/social-twitter-2x.png');
   width: 40px;
   height: 40px;
-  background-size: 40px;
+  background-size: 80px;
   margin-right: 10px;
 }
 
 .social-buttons .social-twitter:hover {
-  background: url('/img/social-twitter-hover.png');
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
-  margin-right: 10px;
+  background-position: 40px;
 }
 
 .social-buttons .social-linkedin {
-  background: url('/img/social-linkedin.png');
+  background: url('/img/social-linkedin-2x.png');
   width: 40px;
   height: 40px;
-  background-size: 40px;
+  background-size: 80px;
   margin-right: 10px;
 }
 
 .social-buttons .social-linkedin:hover {
-  background: url('/img/social-linkedin-hover.png');
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
-  margin-right: 10px;
+  background-position: 40px;
 }
